--- a/templates/diplome/editD.html.twig
+++ b/templates/diplome/editD.html.twig
@@ -56,7 +56,7 @@
         }
     </style>
 
-                    <h1>Ajouter Formation</h1>
+                    <h1>Ajouter Diplome</h1>
                     {{ form (form) }}
                 
 {% endblock %}
