--- a/templates/cours/editC.html.twig
+++ b/templates/cours/editC.html.twig
@@ -1,3 +1,62 @@
+{# editC.html.twig #}
+{% extends 'back.html.twig' %}
 
-    {{ form(form) }}
+{% block title %}{% endblock %}
+{% block content %}
 
+
+<title>Modifier Formation</title>
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 50px;
+        }
+
+        label {
+            font-weight: bold;
+
+        }
+
+        input[type="text"],
+        input[type="number"] {
+            width: 100%;
+            padding: 14px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
+
+                    <h1>Modifier Cours</h1>
+                    {{ form (form) }}
+                
+{% endblock %}
