--- a/templates/edit.html.twig
+++ b/templates/edit.html.twig
@@ -1,11 +1,12 @@
+{# edit.html.twig #}
+{% extends 'back.html.twig' %}
 
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modifier Formation</title>
-    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+{% block title %}{% endblock %}
+{% block content %}
+
+
+<title>Modifier Formation</title>
+<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,7 +14,7 @@
         }
 
         .container {
-            max-width: 600px;
+            max-width: 900px;
             margin: 50px auto;
             padding: 20px;
             background-color: #fff;
@@ -23,17 +24,18 @@
 
         h1 {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 50px;
         }
 
         label {
             font-weight: bold;
+
         }
 
         input[type="text"],
         input[type="number"] {
             width: 100%;
-            padding: 8px;
+            padding: 14px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 4px;
@@ -53,13 +55,8 @@
             background-color: #0056b3;
         }
     </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Modifier Formation</h1>
-        {{ form (form) }}  
-        </div>
-    </div>
-</body>
-</html>
 
+                    <h1>Modifier Formation</h1>
+                    {{ form (form) }}
+                
+{% endblock %}
